# Visualizor2D

./: CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  visualizor.cpp  visualizor.h  visualizor_2d.cpp  visualizor_2d.h  visualizor_convertion.cpp  visualizor_draw_image.cpp  visualizor_load_and_save_image.cpp  visualizor_load_image.cpp  visualizor_save_image.cpp  visualizor_show_features_in_image.cpp  visualizor_show_image.cpp  visualizor_show_matrix.cpp
src/fonts/: fonts.cpp  fonts.h
src/glad+khr/: glad.h  khrplatform.h
src/stb_image/: CMakeLists.txt  stb_image.h  stb_image_write.h
test/: test_load_and_save.cpp  test_visualizor.cpp
